@@ -1,6 +1,6 @@
 /*
  * This file is part of John the Ripper password cracker,
- * Copyright (c) 1996-2012 by Solar Designer
+ * Copyright (c) 1996-2013 by Solar Designer
  */
 
 #include <stdio.h>
@@ -73,7 +73,7 @@ static struct opt_entry opt_list[] = {
 
 #define JOHN_USAGE \
 "John the Ripper password cracker, version " JOHN_VERSION "\n" \
-"Copyright (c) 1996-2012 by " JOHN_COPYRIGHT "\n" \
+"Copyright (c) 1996-2013 by " JOHN_COPYRIGHT "\n" \
 "Homepage: http://www.openwall.com/john/\n" \
 "\n" \
 "Usage: %s [OPTIONS] [PASSWORD-FILES]\n" \
